test_data/neg/ss/655294/Windows/655294.acc_simp.rtf
>655294
MELVKVVFMGWFKNESMFTKEITMMKDDVQWATTQYAEVNKALVKAFIDDKKVCEVDCRG
EEEMEBMBMBMBEEEEMBEEEBEBMEEMBEMBBEMBEEBMEMBBEBBMEEEEMBEMEEEE
